# Eficaz

./: .gitmodules  CMakeLists.txt
db/: def.h  mysql.c  mysql.h
env/: context.c  context.h  project.c  project.h  sequence.c  sequence.h  shot.c  shot.h
socket/dbus/: dbus.c  dbus.h
